# BootCamp_Python

./: README.md
aula_02_typeError/: Exercicios.py  app.py  testes.py
aula_03/: app.py  novo.py  testes.py
aula_04/: Exercicios Extras.ipynb  app.py  exemplo.csv  exercicios.py
aula_07/: app.py  etl.py  main.py  vendas.csv
aula_08/: dados.parquet  etl.py  pipeline.py  pyproject.toml
aula_09/: app.py  pyproject.toml
aula_11/01-basico/: class.py
aula_16/: pyproject.toml
aula_17/: desafio.py  desafio_query.py  exemplo.py  pyproject.toml
aula_18/: exemplo_00.py  pokemon.db  pyproject.toml
aula_18/src/: controller.py  main.py  models.py  schema.py
aula_19/: database.py  main.py  models.py  pyproject.toml  schema.py  test.db
aula_poo/: client.py  csv_tst.py  exemplo.csv  pyproject.toml
aula_poo/src/interface/classes/: csv_class.py
